include/lv00/engine.h


typedef enum {
    ENGINE_OK,
    ENGINE_OUT_OF_MEMORY,
    ENGINE_INVALID_STATE,
    ENGINE_INVALID_ARGUMENT,
    ENGINE_CONSTRAINT_CONFLICT,
    ENGINE_MODULE_ERROR
} EngineStatus;
typedef struct LV00Engine {
    ConstraintGraph *main_graph;
    Module **loaded_modules;
    int module_count;
    int module_capacity;        
    AxiomPackage **axiom_packages;
    int axiom_package_count;
    int axiom_package_capacity; 
    RewriteRule **rewrite_rules;
    int rewrite_rule_count;
    int rewrite_rule_capacity;  
    int rewrite_step_limit;
    void *frozen_point;
    int last_unify_status;
    EngineStatus last_status;           
    char          last_error[256];      
    StreamContext *stream_ctx;
} LV00Engine;
LV00Engine *engine_create(void);
void engine_destroy(LV00Engine *engine);
ModuleLoadStatus engine_load_module(LV00Engine *engine, const char *filepath);
AxiomLoadStatus engine_load_axiom_package(LV00Engine *engine, const char *filepath);
bool engine_pack_function(LV00Engine *engine, int *internal_node_ids, int internal_count,
                          int *input_port_ids, int input_count,
                          int *output_port_ids, int output_count,
                          int *out_func_block_id);
int *engine_instantiate_function(LV00Engine *engine, int func_block_id,
                                  int *arg_mappings, int arg_count,
                                  int *out_result_count);
UnifyStatus engine_unify(LV00Engine *engine, ConstraintGraph *construction,
                        ConstraintGraph *proposition);
typedef enum {
    ENGINE_SOLVE_OK,
    ENGINE_SOLVE_CONFLICT,
    ENGINE_SOLVE_TIMEOUT,
    ENGINE_SOLVE_ERROR
} EngineSolveResult;
typedef enum {
    ENGINE_CIRCUIT_IGNORE,
    ENGINE_CIRCUIT_ROLLBACK,
    ENGINE_CIRCUIT_DOWNGRADE,
    ENGINE_CIRCUIT_ERROR
} EngineCircuitResult;
typedef enum {
    ENGINE_CIRCUIT_ACTION_IGNORE,     
    ENGINE_CIRCUIT_ACTION_ROLLBACK,   
    ENGINE_CIRCUIT_ACTION_DOWNGRADE   
} EngineCircuitAction;
EngineStatus engine_get_last_status(const LV00Engine *engine);
const char *engine_get_last_error(const LV00Engine *engine);
EngineSolveResult engine_solve(LV00Engine *engine);
int engine_rewrite_and_solve(LV00Engine *engine, int max_rewrite_steps, int max_solve_steps);
EngineCircuitResult engine_handle_circuit_trip(LV00Engine *engine);
EngineCircuitResult engine_handle_circuit_trip_with_action(LV00Engine *engine, EngineCircuitAction action);
void engine_set_rewrite_step_limit(LV00Engine *engine, int limit);
int engine_get_rewrite_step_limit(const LV00Engine *engine);
void *engine_create_frozen_point(LV00Engine *engine);
bool engine_restore_frozen_point(LV00Engine *engine, void *frozen_point);
void engine_destroy_frozen_point(void *frozen_point);