include/lv00/recursion.h


typedef struct Measure Measure;
typedef struct MeasureSystem MeasureSystem;
typedef struct RecursionContext RecursionContext;
typedef enum {
    MEASURE_LESS,       
    MEASURE_EQUAL,      
    MEASURE_GREATER,    
    MEASURE_UNKNOWN,    
    MEASURE_ERROR       
} MeasureCompareResult;
struct Measure {
    int id;                     
    MeasureType type;           
    char *name;                 
    int reference_node_id;      
    enum {
        MEASURE_KIND_LENGTH,    
        MEASURE_KIND_AREA,      
        MEASURE_KIND_ANGLE,     
        MEASURE_KIND_DEPTH,     
        MEASURE_KIND_CUSTOM     
    } kind;
    int (*compare_func)(GeomNode *a, GeomNode *b, void *user_data);
    void *user_data;
    bool is_well_founded;       
};
struct MeasureSystem {
    Measure **measures;                     
    int measure_count;                      
    Measure *default_measure;               
    bool has_non_symbolic;                  
    NonSymbolicMeasureMeta *non_symbolic_metas;  
    int non_symbolic_meta_count;            
    NonSymbolicMeasureValidationMeta *validation_metas; 
    int validation_meta_count;              
};
struct RecursionContext {
    int current_depth;          
    int max_depth;              
    Measure *active_measure;    
    SymbolicCoord **measure_values; 
    int measure_value_count;    
    int *call_stack;            
    int call_stack_size;        
    bool is_terminated;         
    char *termination_reason;   
    RecursionDepthCallback depth_callback;  
    void *depth_callback_user_data;         
};
typedef enum {
    RECURSION_OK,               
    RECURSION_NOT_DECREASING,   
    RECURSION_DEPTH_EXCEEDED,   
    RECURSION_CYCLE_DETECTED,   
    RECURSION_MEASURE_UNKNOWN,  
    RECURSION_ERROR             
} RecursionCheckResult;
MeasureSystem *measure_system_create(void);
void measure_system_destroy(MeasureSystem *ms);
Measure *measure_create_symbolic(const char *name, int kind, int ref_node_id);
void measure_destroy(Measure *m);
bool measure_system_add(MeasureSystem *ms, Measure *m);
void measure_system_set_default(MeasureSystem *ms, Measure *m);
SymbolicCoord *measure_compute_value(Measure *m, GeomNode *node, ConstraintGraph *graph);
SymbolicCoord *measure_compute_value_symbolic(Measure *m, GeomNode *node, ConstraintGraph *graph);
MeasureCompareResult measure_compare(Measure *m, SymbolicCoord *a, SymbolicCoord *b);
RecursionContext *recursion_context_create(int max_depth);
void recursion_context_destroy(RecursionContext *ctx);
RecursionCheckResult recursion_context_enter(RecursionContext *ctx, int func_block_id, const GeomNode *input, ConstraintGraph *graph);
void recursion_context_exit(RecursionContext *ctx);
int recursion_context_get_depth(RecursionContext *ctx);
void recursion_context_reset(RecursionContext *ctx);
bool recursion_check_mutual(int *func_ids, int count, MeasureSystem *ms);
typedef struct {
    char name[64];            
    bool passed;              
    char error_msg[128];      
} RecursionTestResult;
int recursion_run_builtin_tests(
    MeasureSystem *sys,
    RecursionTestResult **results,
    int *result_count);