include/lv00/proof.h


typedef struct Proposition Proposition;
typedef struct ProofNavigator ProofNavigator;
typedef enum {
    PROOF_COLOR_GREEN,          
    PROOF_COLOR_BLUE_UNEXPLORED, 
    PROOF_COLOR_BLUE_RESOURCE,   
    PROOF_COLOR_BLUE_OUT_OF_RANGE, 
    PROOF_COLOR_GREEN_VERIFIED,  
    PROOF_COLOR_YELLOW,          
    PROOF_COLOR_ORANGE_ORACLE,   
    PROOF_COLOR_ORANGE_EX_FALSO, 
    PROOF_COLOR_AMBER,           
    PROOF_COLOR_DARK_ORANGE      
} ProofColor;
typedef enum {
    PROPOSITION_ATOMIC,     
    PROPOSITION_CONJUNCTION, 
    PROPOSITION_DISJUNCTION, 
    PROPOSITION_IMPLICATION, 
    PROPOSITION_NEGATION,    
    PROPOSITION_UNIVERSAL,   
    PROPOSITION_EXISTENTIAL, 
    PROPOSITION_BOTTOM       
} PropositionType;
struct Proposition {
    int id;                     
    PropositionType type;       
    ProofColor color;           
    int *input_port_ids;        
    int input_count;            
    int *output_port_ids;       
    int output_count;           
    ConstraintGraph *pattern;   
    int *precondition_region_ids; 
    int precondition_count;       
    int *postcondition_constraint_ids; 
    int postcondition_count;          
    Proposition **sub_props;    
    int sub_prop_count;         
    TypeRegion *prop_type;      
    char *name;                 
    char *description;          
};
struct ProofNavigator {
    ProofStep **steps;          
    int step_count;             
    int current_step;           
    Proposition *target_prop;   
    ConstraintGraph *construction; 
    ProofDependency *dep_tree;  
    bool is_complete;           
    ProofColor final_color;     
    int *breakpoint_indices;    
    int breakpoint_count;       
    PropositionEquivalence *equivalences; 
    int equivalence_count;      
    int equivalence_capacity;   
    BottomDefinition *bottom_def; 
    int *lemma_view_step_ids;   
    LemmaViewState *lemma_view_states; 
    int lemma_view_count;       
    int lemma_view_capacity;    
    LV00Engine *engine;
};
Proposition *proposition_create(int id, PropositionType type);
void proposition_destroy(Proposition *prop);
UnifyStatus proof_unify(
    ConstraintGraph *construction,
    Proposition *proposition,
    bool normalize_first
);
ProofNavigator *proof_navigator_create(Proposition *target, LV00Engine *engine);
void proof_navigator_destroy(ProofNavigator *nav);
bool proof_navigator_next(ProofNavigator *nav);
bool proof_navigator_prev(ProofNavigator *nav);
bool proof_navigator_goto(ProofNavigator *nav, int step_index);
ProofColor proof_navigator_compute_final_color(ProofNavigator *nav);
bool proof_create_ex_falso_block(ConstraintGraph *graph, int *out_block_id);
bool proof_apply_ex_falso(
    ProofNavigator *nav,
    ConstraintGraph *bottom_proof,
    Proposition *target_prop
);
bool proof_export_html(ProofNavigator *nav, const char *filepath);
bool proof_export_latex(ProofNavigator *nav, const char *filepath);