python/lv00/_ctypes_binding.py


# 从图中移除指定 ID 的约束
_lib.graph_remove_constraint.argtypes = [POINTER(_ConstraintGraph), c_int]
_lib.graph_remove_constraint.restype = c_int

# 规范化约束图：合并等价节点、消除冗余约束
_lib.graph_normalize.argtypes = [POINTER(_ConstraintGraph), c_bool]
_lib.graph_normalize.restype = POINTER(_NormalizationResult)

# 检测冗余约束：返回可以安全移除的约束 ID 列表
_lib.graph_detect_redundant_constraints.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int)]
_lib.graph_detect_redundant_constraints.restype = POINTER(c_int)

# 检测冲突约束组：返回互相冲突的约束集合
_lib.graph_detect_conflicts.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int), POINTER(POINTER(c_int))]
_lib.graph_detect_conflicts.restype = POINTER(POINTER(c_int))

# 验证区域的闭合性：检查边界线段是否构成闭合环
_lib.graph_validate_region_closure.argtypes = [POINTER(_ConstraintGraph), c_int]
_lib.graph_validate_region_closure.restype = c_bool

# ============================================================
# NormalizationResult 函数签名
# ============================================================

_lib.normalization_result_destroy.argtypes = [POINTER(_NormalizationResult)]
_lib.normalization_result_destroy.restype = None

# ============================================================
# FuncBlock 函数签名
# ============================================================

_lib.func_block_create.argtypes = [c_int]
_lib.func_block_create.restype = POINTER(_FuncBlock)

_lib.func_block_destroy.argtypes = [POINTER(_FuncBlock)]
_lib.func_block_destroy.restype = None

_lib.func_block_pack.argtypes = [
    POINTER(_ConstraintGraph),
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(POINTER(_FuncBlock))
]
_lib.func_block_pack.restype = c_int

_lib.func_block_instantiate.argtypes = [
    POINTER(_FuncBlock),
    POINTER(_ConstraintGraph),
    POINTER(c_int), c_int,
    POINTER(POINTER(c_int)), POINTER(c_int)
]
_lib.func_block_instantiate.restype = c_int

_lib.func_block_determinism_check_static.argtypes = [POINTER(_FuncBlock), POINTER(_ConstraintGraph)]
_lib.func_block_determinism_check_static.restype = c_int

_lib.func_block_determinism_check_dynamic.argtypes = [POINTER(_FuncBlock), POINTER(_ConstraintGraph), POINTER(POINTER(_SymbolicCoord)), c_int]
_lib.func_block_determinism_check_dynamic.restype = c_int

_lib.func_block_verify_determinism.argtypes = [POINTER(_FuncBlock), POINTER(_ConstraintGraph), c_int]
_lib.func_block_verify_determinism.restype = c_int

# 选择器相关
_lib.selector_create.argtypes = [c_int]
_lib.selector_create.restype = c_void_p

_lib.selector_create_with_reference.argtypes = [c_int, c_int]
_lib.selector_create_with_reference.restype = c_void_p

_lib.selector_destroy.argtypes = [c_void_p]
_lib.selector_destroy.restype = None

_lib.selector_apply.argtypes = [c_void_p, POINTER(POINTER(_GeomNode)), c_int, POINTER(c_int)]
_lib.selector_apply.restype = c_bool

# ============================================================
# Proof 函数签名
# ============================================================

_lib.proposition_create.argtypes = [c_int, c_int]
_lib.proposition_create.restype = POINTER(_Proposition)

_lib.proposition_destroy.argtypes = [POINTER(_Proposition)]
_lib.proposition_destroy.restype = None

_lib.proof_navigator_create.argtypes = [POINTER(_Proposition)]
_lib.proof_navigator_create.restype = POINTER(_ProofNavigator)

_lib.proof_navigator_destroy.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_destroy.restype = None

_lib.proof_unify.argtypes = [POINTER(_ConstraintGraph), POINTER(_Proposition), c_bool]
_lib.proof_unify.restype = c_int

_lib.proof_create_ex_falso_block.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int)]
_lib.proof_create_ex_falso_block.restype = c_bool

_lib.proof_apply_ex_falso.argtypes = [POINTER(_ProofNavigator), POINTER(_ConstraintGraph), POINTER(_Proposition)]
_lib.proof_apply_ex_falso.restype = c_bool

_lib.proof_navigator_next.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_next.restype = c_bool

_lib.proof_navigator_prev.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_prev.restype = c_bool

_lib.proof_navigator_goto.argtypes = [POINTER(_ProofNavigator), c_int]
_lib.proof_navigator_goto.restype = c_bool

_lib.proof_navigator_compute_final_color.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_compute_final_color.restype = c_int

_lib.proof_export_html.argtypes = [POINTER(_ProofNavigator), c_char_p]
_lib.proof_export_html.restype = c_bool

_lib.proof_export_latex.argtypes = [POINTER(_ProofNavigator), c_char_p]
_lib.proof_export_latex.restype = c_bool

# ============================================================
# Recursion 函数签名
# ============================================================

_lib.measure_system_create.argtypes = []
_lib.measure_system_create.restype = POINTER(_MeasureSystem)

_lib.measure_system_destroy.argtypes = [POINTER(_MeasureSystem)]
_lib.measure_system_destroy.restype = None

_lib.measure_create_symbolic.argtypes = [c_char_p, c_int, c_int]
_lib.measure_create_symbolic.restype = c_void_p

_lib.measure_destroy.argtypes = [c_void_p]
_lib.measure_destroy.restype = None

_lib.measure_system_add.argtypes = [POINTER(_MeasureSystem), c_void_p]
_lib.measure_system_add.restype = c_bool

_lib.measure_system_set_default.argtypes = [POINTER(_MeasureSystem), c_void_p]
_lib.measure_system_set_default.restype = None

_lib.measure_compute_value.argtypes = [c_void_p, POINTER(_GeomNode), POINTER(_ConstraintGraph)]
_lib.measure_compute_value.restype = POINTER(_SymbolicCoord)

_lib.measure_compute_value_symbolic.argtypes = [c_void_p, POINTER(_GeomNode), POINTER(_ConstraintGraph)]
_lib.measure_compute_value_symbolic.restype = POINTER(_SymbolicCoord)

_lib.measure_compare.argtypes = [c_void_p, POINTER(_SymbolicCoord), POINTER(_SymbolicCoord)]
_lib.measure_compare.restype = c_int

_lib.recursion_context_create.argtypes = [c_int]
_lib.recursion_context_create.restype = POINTER(_RecursionContext)

_lib.recursion_context_destroy.argtypes = [POINTER(_RecursionContext)]
_lib.recursion_context_destroy.restype = None

_lib.recursion_context_enter.argtypes = [POINTER(_RecursionContext), c_int, POINTER(_GeomNode), POINTER(_ConstraintGraph)]
_lib.recursion_context_enter.restype = c_int

_lib.recursion_context_exit.argtypes = [POINTER(_RecursionContext)]
_lib.recursion_context_exit.restype = None

_lib.recursion_context_get_depth.argtypes = [POINTER(_RecursionContext)]
_lib.recursion_context_get_depth.restype = c_int

_lib.recursion_context_reset.argtypes = [POINTER(_RecursionContext)]
_lib.recursion_context_reset.restype = None

_lib.recursion_check_mutual.argtypes = [POINTER(c_int), c_int, POINTER(_MeasureSystem)]
_lib.recursion_check_mutual.restype = c_bool

_lib.recursion_run_builtin_tests.argtypes = [POINTER(_MeasureSystem), POINTER(POINTER(c_void_p)), POINTER(c_int)]
_lib.recursion_run_builtin_tests.restype = c_int

# ============================================================
# Engine 函数签名
# ============================================================
# 以下函数用于创建和操作 Lv-00 主引擎。
# 引擎是系统的顶层协调器，管理约束图、模块加载、
# 函数打包/实例化、求解和重写等核心功能。

# 创建新的引擎实例
_lib.engine_create.argtypes = []
_lib.engine_create.restype = POINTER(_LV00Engine)

# 销毁引擎实例，释放所有关联资源
_lib.engine_destroy.argtypes = [POINTER(_LV00Engine)]
_lib.engine_destroy.restype = None

# 执行求解：重写 -> 求解 -> 冲突检查
_lib.engine_solve.argtypes = [POINTER(_LV00Engine)]
_lib.engine_solve.restype = c_int

# 执行重写-求解协作流程，max_rewrite_steps 和 max_solve_steps 控制步数上限
_lib.engine_rewrite_and_solve.argtypes = [POINTER(_LV00Engine), c_int, c_int]
_lib.engine_rewrite_and_solve.restype = c_int

# 设置重写步数上限（单次重写的最大步数）
_lib.engine_set_rewrite_step_limit.argtypes = [POINTER(_LV00Engine), c_int]
_lib.engine_set_rewrite_step_limit.restype = None

# 获取当前重写步数上限
_lib.engine_get_rewrite_step_limit.argtypes = [POINTER(_LV00Engine)]
_lib.engine_get_rewrite_step_limit.restype = c_int

# 加载模块文件（.lv00 格式），将模块内容加载到引擎的约束图中
_lib.engine_load_module.argtypes = [POINTER(_LV00Engine), c_char_p]
_lib.engine_load_module.restype = c_int

# 加载公理包文件，添加公理到引擎的规则库中
_lib.engine_load_axiom_package.argtypes = [POINTER(_LV00Engine), c_char_p]
_lib.engine_load_axiom_package.restype = c_int

# 打包函数块：将内部节点和端口封装为可重用的函数模板
_lib.engine_pack_function.argtypes = [
    POINTER(_LV00Engine),
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int)
]
_lib.engine_pack_function.restype = c_bool

# 实例化函数块：使用实参替换形式参数创建函数实例
_lib.engine_instantiate_function.argtypes = [
    POINTER(_LV00Engine), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int)
]
_lib.engine_instantiate_function.restype = POINTER(c_int)

# 执行合一检查：检查构造图是否满足命题模式
_lib.engine_unify.argtypes = [POINTER(_LV00Engine), POINTER(_ConstraintGraph), POINTER(_ConstraintGraph)]
_lib.engine_unify.restype = c_int

# 处理位电路跳闸事件（默认恢复策略）
_lib.engine_handle_circuit_trip.argtypes = [POINTER(_LV00Engine)]
_lib.engine_handle_circuit_trip.restype = c_int

# 使用指定动作处理位电路跳闸
_lib.engine_handle_circuit_trip_with_action.argtypes = [POINTER(_LV00Engine), c_int]
_lib.engine_handle_circuit_trip_with_action.restype = c_int

# 创建冻结点快照，保存当前引擎状态用于后续回滚
_lib.engine_create_frozen_point.argtypes = [POINTER(_LV00Engine)]
_lib.engine_create_frozen_point.restype = c_void_p

# 恢复到冻结点状态，丢弃快照之后的所有修改
_lib.engine_restore_frozen_point.argtypes = [POINTER(_LV00Engine), c_void_p]
_lib.engine_restore_frozen_point.restype = c_bool

# 销毁冻结点快照，释放占用的内存
_lib.engine_destroy_frozen_point.argtypes = [c_void_p]
_lib.engine_destroy_frozen_point.restype = None

# 获取引擎最后一次操作的状态码
_lib.engine_get_last_status.argtypes = [POINTER(_LV00Engine)]
_lib.engine_get_last_status.restype = c_int

# 获取引擎最后一次操作的错误消息
_lib.engine_get_last_error.argtypes = [POINTER(_LV00Engine)]
_lib.engine_get_last_error.restype = c_char_p

# ============================================================
# Debug 函数签名
# ============================================================

_lib.debug_log_init.argtypes = []
_lib.debug_log_init.restype = c_int

_lib.debug_log_shutdown.argtypes = []
_lib.debug_log_shutdown.restype = None

_lib.debug_set_log_level.argtypes = [c_int]
_lib.debug_set_log_level.restype = None

_lib.debug_get_log_level.argtypes = []
_lib.debug_get_log_level.restype = c_int

_lib.debug_set_mode.argtypes = [c_bool]
_lib.debug_set_mode.restype = None

_lib.debug_is_debug_mode.argtypes = []
_lib.debug_is_debug_mode.restype = c_bool

_lib.debug_reset_counters.argtypes = []
_lib.debug_reset_counters.restype = None

_lib.debug_get_counters.argtypes = [c_void_p]
_lib.debug_get_counters.restype = None

_lib.debug_counters_report.argtypes = []
_lib.debug_counters_report.restype = c_char_p

_lib.mem_pool_create.argtypes = [ctypes.c_size_t, c_int]
_lib.mem_pool_create.restype = c_void_p

_lib.mem_pool_destroy.argtypes = [c_void_p]
_lib.mem_pool_destroy.restype = None

# ============================================================
# Unify 函数签名
# ============================================================

_lib.unify_check.argtypes = [POINTER(_ConstraintGraph), POINTER(_ConstraintGraph)]
_lib.unify_check.restype = c_int

_lib.unify_detailed.argtypes = [POINTER(_ConstraintGraph), POINTER(_ConstraintGraph), POINTER(c_char_p)]
_lib.unify_detailed.restype = c_int

# ============================================================
# Rewrite 函数签名
# ============================================================

_lib.rewrite_create_rule.argtypes = [c_char_p, c_char_p, c_int]
_lib.rewrite_create_rule.restype = c_void_p

_lib.rewrite_destroy_rule.argtypes = [c_void_p]
_lib.rewrite_destroy_rule.restype = None

_lib.rewrite_add_rule.argtypes = [POINTER(_ConstraintGraph), c_void_p]
_lib.rewrite_add_rule.restype = c_bool

_lib.rewrite_rewrite.argtypes = [POINTER(_ConstraintGraph), c_int]
_lib.rewrite_rewrite.restype = c_int

_lib.rewrite_rewrite_until.argtypes = [POINTER(_ConstraintGraph), c_int, c_int]
_lib.rewrite_rewrite_until.restype = c_int

# ============================================================
# Solver 函数签名
# ============================================================
